// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WidgetTabsRow > renders correctly 1`] = `
<generic-tabs-row-stub
  background-color="black"
  color=""
  dark="false"
  grow="false"
  height="33"
  items="[object Object],[object Object]"
  labelkey="label"
  modelvalue="0"
  notclickable="false"
  show-arrows="false"
  sizeclass=""
  tabnamefn="[Function]"
/>
`;

exports[`WidgetTabsRow > renders correctly with dark mode 1`] = `
<generic-tabs-row-stub
  background-color="black"
  color=""
  dark="true"
  grow="false"
  height="33"
  items="[object Object],[object Object]"
  labelkey="label"
  modelvalue="0"
  notclickable="false"
  show-arrows="false"
  sizeclass=""
  tabnamefn="[Function]"
/>
`;

exports[`WidgetTabsRow > renders correctly with single widget 1`] = `
<generic-tabs-row-stub
  background-color="black"
  color=""
  dark="false"
  grow="false"
  height="33"
  items="[object Object]"
  labelkey="label"
  modelvalue="0"
  notclickable="true"
  show-arrows="false"
  sizeclass=""
  tabnamefn="[Function]"
/>
`;
